# GameAutomata

./: CMakeLists.txt  LICENSE  README.md
Snake/: CMakeLists.txt  Snake  SnakeAI.cpp  SnakeController.cpp  SnakeGame.cpp  SnakeGame.hpp  SnakeMisc.cpp  SnakeRenderer.cpp
Snake/AIs/SmarterAI/: CMakeLists.txt  SmarterAI.cpp
Snake/AIs/StupidAI/: CMakeLists.txt  StupidAI.cpp
Snake/Data/: level1.txt
Snake/shared/: SnakeGame.hpp  SnakeMisc.cpp  SnakeSerialization.cpp
