PROJECT(Snake)
SET( ${PROJECT_NAME}_SOURCES
  SnakeController.cpp
  SnakeGame.cpp
  SnakeRenderer.cpp
  SnakeMisc.cpp
  SnakeAI.cpp
)

ADD_EXECUTABLE(${PROJECT_NAME} ${${PROJECT_NAME}_SOURCES})
ADD_CUSTOM_COMMAND(TARGET ${PROJECT_NAME} POST_BUILD COMMAND cmake ARGS -E copy $<TARGET_FILE:${PROJECT_NAME}> ${${PROJECT_NAME}_SOURCE_DIR})
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} ${SDL_LIBRARY} ${PNG_LIBRARIES} ${ZLIB_LIBRARIES})
