PROJECT(Snake)
INCLUDE_DIRECTORIES(AFTER, "shared")
SET( ${PROJECT_NAME}_SOURCES
  shared/SnakeMisc.cpp
  shared/SnakeSerialization.cpp
  SnakeController.cpp
  SnakeGame.cpp
  SnakeRenderer.cpp
)

SET( AIS
    AIs/StupidAI
	AIs/SmarterAI
)

## Build rules for the main executable
ADD_EXECUTABLE(${PROJECT_NAME} ${${PROJECT_NAME}_SOURCES})
ADD_CUSTOM_COMMAND(	TARGET ${PROJECT_NAME} POST_BUILD COMMAND cmake
					ARGS -E copy $<TARGET_FILE:${PROJECT_NAME}> ${${PROJECT_NAME}_SOURCE_DIR})
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} ${SDL_LIBRARY} ${PNG_LIBRARIES} ${ZLIB_LIBRARIES})

## Different AIs
FOREACH(ai ${AIS})
  ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/${PROJECT_NAME}/${ai} ${CMAKE_BINARY_DIR}/${PROJECT_NAME}/${ai}/bin )
ENDFOREACH()
