PROJECT(StupidAI)
INCLUDE_DIRECTORIES(AFTER, "../../shared")
SET( ${PROJECT_NAME}_SOURCES
  ../../shared/SnakeMisc.cpp
  ../../shared/SnakeSerialization.cpp
  StupidAI.cpp
)

ADD_EXECUTABLE(${PROJECT_NAME} ${${PROJECT_NAME}_SOURCES})
ADD_CUSTOM_COMMAND(	TARGET ${PROJECT_NAME} POST_BUILD COMMAND cmake
					ARGS -E copy $<TARGET_FILE:${PROJECT_NAME}> ${${PROJECT_NAME}_SOURCE_DIR})
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} )

